--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
   },
   "dependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.4",
+    "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
     "@openzeppelin/contracts": "^4.4.2",
     "chai": "^4.3.4",
+    "dotenv": "^14.3.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.3",
+    "hardhat-gas-reporter": "^1.0.7",
     "hardhat-waffle": "^0.0.1-security",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "solidity-coverage": "^0.7.18"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
